Fix gap in sections caused by scroll link

--- a/source/assets/styles/pages/index/_scroll_link.scss
+++ b/source/assets/styles/pages/index/_scroll_link.scss
@@ -1,12 +1,15 @@
 .scroll-link {
   @include heading;
+  @include transform(translateX(-50%));
   display: block;
+  position: absolute;
+  left: 50%;
+  bottom: -6px;
   position: relative;
   margin: auto;
   color: $color-body;
   text-decoration: none;
   text-align: center;
-  bottom: -25px;
   z-index: 1;
 
   .down-arrow-border {
@@ -17,12 +20,13 @@
     @include shape-diamond($size: 26px);
   }
 
+  .label,
   .down-arrow-border,
   .down-arrow {
     @include transform(translateX(-50%));
     position: absolute;
-    top: 0;
     left: 50%;
+    top: 1px;
   }
 
   .down-arrow {
